--- a/packages/core/src/html/index.html
+++ b/packages/core/src/html/index.html
@@ -211,7 +211,11 @@
       <brx-accordion-legacy id="acc-lgcy-js"></brx-accordion-legacy>
 
       <script type="text/javascript">
-        document.querySelector('#acc-lgcy-js').entries = [{ id: '02', title: '02', content: '02' }];
+        const generateEntry = key => ({ id: String(key).padStart(2, '0'), title: String(key).padStart(2, '0'), content: String(key).padStart(2, '0') });
+
+        document.querySelector('#acc-lgcy-js').entries = Array.from({ length: 3 })
+          .map((_, i) => i)
+          .map(generateEntry);
       </script>
     </section>
 
@@ -245,16 +249,16 @@
           <brx-list hidden="hidden" id="avatar-menu">
             <brx-item pass-styles></brx-item>
             <brx-item pass-styles>
-              <a href="javascript:void(0)">Dados pessoais</a>
+              <a href="#">Dados pessoais</a>
             </brx-item>
             <brx-item pass-styles>
-              <a href="javascript:void(0)">Privacidade</a>
+              <a href="#">Privacidade</a>
             </brx-item>
             <brx-item pass-styles>
-              <a href="javascript:void(0)">Notificações</a>
+              <a href="#">Notificações</a>
             </brx-item>
             <brx-item pass-styles>
-              <a href="javascript:void(0)">Perguntas frequentes</a>
+              <a href="#">Perguntas frequentes</a>
             </brx-item>
           </brx-list>
         </brx-dropdown>
@@ -2819,6 +2823,71 @@
           <brx-radio invalid label="Oi" name="rex2" value="c"></brx-radio>
           <brx-radio label="Oi" name="rex2" valid value="d"></brx-radio>
         </brx-radio-group>
+      </div>
+    </section>
+
+    <hr />
+
+    <!-- Select -->
+
+    <section>
+      <h1>Select</h1>
+
+      <div>
+        <h2>Simples</h2>
+
+        <brx-select id="sel1" label="Label" placeholder="Selecione o item">
+          <brx-select-option name="estados-simples" value="rb21" label="Rondônia"></brx-select-option>
+          <brx-select-option name="estados-simples" value="rb23" label="São Paulo"></brx-select-option>
+          <brx-select-option name="estados-simples" value="rb27" label="Exterior"></brx-select-option>
+        </brx-select>
+
+        <script>
+          {
+            const select = document.querySelector('#sel1');
+            select.value = ['rb27'];
+          }
+        </script>
+
+        <brx-message variant="feedback" severity="warning"> Texto auxiliar Função de prevenir erros. </brx-message>
+      </div>
+
+      <div>
+        <h2>Múltiplo</h2>
+
+        <brx-select id="sel2" multiple label="Label" placeholder="Selecione o item">
+          <brx-select-option value="cb21" label="Rondônia"></brx-select-option>
+          <brx-select-option value="cb23" label="São Paulo"></brx-select-option>
+          <brx-select-option value="cb27" label="Exterior"></brx-select-option>
+        </brx-select>
+
+        <script>
+          {
+            const select = document.querySelector('#sel2');
+            select.value = ['cb21', 'cb23'];
+          }
+        </script>
+
+        <brx-message variant="feedback" severity="warning"> Texto auxiliar Função de prevenir erros. </brx-message>
+      </div>
+
+      <div>
+        <h2>Controlled</h2>
+
+        <brx-select id="sel3" multiple label="Label" placeholder="Selecione o item">
+          <brx-select-option value="cb21" label="Rondônia"></brx-select-option>
+          <brx-select-option value="cb23" label="São Paulo"></brx-select-option>
+          <brx-select-option value="cb27" label="Exterior"></brx-select-option>
+        </brx-select>
+
+        <script>
+          {
+            const select = document.querySelector('#sel3');
+            select.controlledValue = ['cb21'];
+          }
+        </script>
+
+        <brx-message variant="feedback" severity="warning"> Texto auxiliar Função de prevenir erros. </brx-message>
       </div>
     </section>
 
