feat(core): brx-select: brxFilterInputChange event (#51)

--- a/packages/core/src/html/index.html
+++ b/packages/core/src/html/index.html
@@ -2874,7 +2874,7 @@
       <div>
         <h2>Controlled</h2>
 
-        <brx-select id="sel3" multiple disable-toggle-all label="Label" placeholder="Selecione até 2 itens.">
+        <brx-select name="siiu" id="sel3" multiple disable-toggle-all label="Label" placeholder="Selecione até 2 itens.">
           <brx-select-option value="cb21" label="Rondônia"></brx-select-option>
           <brx-select-option value="cb23" label="São Paulo"></brx-select-option>
           <brx-select-option value="cb27" label="Exterior"></brx-select-option>
