--- a/packages/core/src/html/index.html
+++ b/packages/core/src/html/index.html
@@ -42,6 +42,10 @@
         margin: 2rem 0;
         padding: 2rem;
       }
+
+      brx-divider {
+        margin: 0.5rem 0;
+      }
     </style>
   </head>
 
@@ -1315,6 +1319,54 @@
             <brx-divider></brx-divider>
           </brx-list>
         </brx-list>
+      </div>
+    </section>
+
+    <brx-divider></brx-divider>
+
+    <!-- DateTimePicker -->
+
+    <section>
+      <h1>DateTimePicker</h1>
+
+      <div>
+        <h2>Simples</h2>
+
+        <div>
+          <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+            <brx-datetimepicker type="date" mode="single" placeholder="dd/mm/aaaa" label="Label"></brx-datetimepicker>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <h2>Com intervalo de datas</h2>
+
+        <div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <brx-datetimepicker type="date" mode="range" placeholder="dd/mm/aaaa até dd/mm/aaaa" label="Label"></brx-datetimepicker>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <h2>Timepicker</h2>
+
+        <div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <brx-datetimepicker type="time" mode="single" placeholder="hh:mm" label="Label"></brx-datetimepicker>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <h2>DatePicker + Timepicker</h2>
+
+        <div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <brx-datetimepicker type="datetime-local" mode="single" placeholder="dd/mm/aaaa hh:mm" label="Label"></brx-datetimepicker>
+          </div>
+        </div>
       </div>
     </section>
 
