--- a/demo/card.html
+++ b/demo/card.html
@@ -6,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- start playground assets -->
-    <link rel="stylesheet" href="https://cdngovbr-ds.estaleiro.serpro.gov.br/design-system/fonts/rawline/css/rawline.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900&amp;display=swap" />
+    <link
+      rel="stylesheet"
+      href="https://cdngovbr-ds.estaleiro.serpro.gov.br/design-system/fonts/rawline/css/rawline.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900&amp;display=swap"
+    />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
-    <link href="build/copperui.css" rel="stylesheet" />
-    <script type="module" src="build/copperui.esm.js"></script>
-    <script nomodule src="build/copperui.js"></script>
+    <link href="/demo/build/copperui.css" rel="stylesheet" />
+    <script type="module" src="/demo/build/copperui.esm.js"></script>
+    <script nomodule src="/demo/build/copperui.js"></script>
     <style media="screen, print" type="text/css">
       html {
         margin: 0;
@@ -57,8 +63,8 @@
 
             <brx-card-content>
               <p>
-                Lorem ipsum doloris sit, amet consectetur adipisicing elit. Tempore perferendis nam porro atque ex at, numquam non optio ab eveniet error vel ad exercitationem,
-                earum et fugiat recusandae harum? Assumenda.
+                Lorem ipsum doloris sit, amet consectetur adipisicing elit. Tempore perferendis nam porro atque ex at,
+                numquam non optio ab eveniet error vel ad exercitationem, earum et fugiat recusandae harum? Assumenda.
               </p>
             </brx-card-content>
 
@@ -89,8 +95,8 @@
             <brx-card hover>
               <brx-card-content>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore perferendis nam porro atque ex at, numquam non optio ab eveniet error vel ad exercitationem,
-                  earum et fugiat recusandae harum? Assumenda.
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore perferendis nam porro atque ex at,
+                  numquam non optio ab eveniet error vel ad exercitationem, earum et fugiat recusandae harum? Assumenda.
                 </p>
               </brx-card-content>
             </brx-card>
@@ -99,8 +105,8 @@
             <brx-card hover>
               <brx-card-content>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore perferendis nam porro atque ex at, numquam non optio ab eveniet error vel ad exercitationem,
-                  earum et fugiat recusandae harum? Assumenda.
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore perferendis nam porro atque ex at,
+                  numquam non optio ab eveniet error vel ad exercitationem, earum et fugiat recusandae harum? Assumenda.
                 </p>
               </brx-card-content>
             </brx-card>
@@ -109,8 +115,8 @@
             <brx-card hover>
               <brx-card-content>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore perferendis nam porro atque ex at, numquam non optio ab eveniet error vel ad exercitationem,
-                  earum et fugiat recusandae harum? Assumenda.
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore perferendis nam porro atque ex at,
+                  numquam non optio ab eveniet error vel ad exercitationem, earum et fugiat recusandae harum? Assumenda.
                 </p>
               </brx-card-content>
             </brx-card>
@@ -149,8 +155,9 @@
                 </brx-card-header>
                 <brx-card-content>
                   <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore perferendis nam porro atque ex at, numquam non optio ab eveniet error vel ad exercitationem,
-                    earum et fugiat recusandae harum? Assumenda.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore perferendis nam porro atque ex at,
+                    numquam non optio ab eveniet error vel ad exercitationem, earum et fugiat recusandae harum?
+                    Assumenda.
                   </p>
                 </brx-card-content>
                 <brx-card-footer>
@@ -196,14 +203,16 @@
               </brx-card-header>
               <brx-card-content tabindex="0">
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore perferendis nam porro atque ex at, numquam non optio ab eveniet error vel ad exercitationem,
-                  earum et fugiat recusandae harum? Assumenda. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore perferendis nam porro atque ex at, numquam non
-                  optio ab eveniet error vel ad exercitationem, earum et fugiat recusandae harum? Assumenda.
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore perferendis nam porro atque ex at,
+                  numquam non optio ab eveniet error vel ad exercitationem, earum et fugiat recusandae harum? Assumenda.
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore perferendis nam porro atque ex at,
+                  numquam non optio ab eveniet error vel ad exercitationem, earum et fugiat recusandae harum? Assumenda.
                 </p>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore perferendis nam porro atque ex at, numquam non optio ab eveniet error vel ad exercitationem,
-                  earum et fugiat recusandae harum? Assumenda. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore perferendis nam porro atque ex at, numquam non
-                  optio ab eveniet error vel ad exercitationem, earum et fugiat recusandae harum? Assumenda.
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore perferendis nam porro atque ex at,
+                  numquam non optio ab eveniet error vel ad exercitationem, earum et fugiat recusandae harum? Assumenda.
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore perferendis nam porro atque ex at,
+                  numquam non optio ab eveniet error vel ad exercitationem, earum et fugiat recusandae harum? Assumenda.
                 </p>
               </brx-card-content>
               <brx-card-footer>
@@ -248,8 +257,9 @@
               </brx-card-header>
               <brx-card-content>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste sit dolor exercitationem asperiores voluptates tenetur consectetur error vero ut expedita, sapiente
-                  voluptate nulla esse! Veritatis aliquam consectetur quod harum expedita!
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste sit dolor exercitationem asperiores
+                  voluptates tenetur consectetur error vero ut expedita, sapiente voluptate nulla esse! Veritatis
+                  aliquam consectetur quod harum expedita!
                 </p>
               </brx-card-content>
               <brx-card-footer>
@@ -282,7 +292,8 @@
                         </div>
                         <div class="col">
                           <p class="m-0">
-                            Nesciunt, laudantium ea officiis hic tempora velit aperiam nemo accusamus nisi, eligendi ducimus! Incidunt ullam minima ratione amet sequi.
+                            Nesciunt, laudantium ea officiis hic tempora velit aperiam nemo accusamus nisi, eligendi
+                            ducimus! Incidunt ullam minima ratione amet sequi.
                           </p>
                         </div>
                       </div>
