--- a/demo/checkbox.html
+++ b/demo/checkbox.html
@@ -6,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- start playground assets -->
-    <link rel="stylesheet" href="https://cdngovbr-ds.estaleiro.serpro.gov.br/design-system/fonts/rawline/css/rawline.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900&amp;display=swap" />
+    <link
+      rel="stylesheet"
+      href="https://cdngovbr-ds.estaleiro.serpro.gov.br/design-system/fonts/rawline/css/rawline.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900&amp;display=swap"
+    />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
-    <link href="build/copperui.css" rel="stylesheet" />
-    <script type="module" src="build/copperui.esm.js"></script>
-    <script nomodule src="build/copperui.js"></script>
+    <link href="/demo/build/copperui.css" rel="stylesheet" />
+    <script type="module" src="/demo/build/copperui.esm.js"></script>
+    <script nomodule src="/demo/build/copperui.js"></script>
     <style media="screen, print" type="text/css">
       html {
         margin: 0;
@@ -55,7 +61,12 @@
             <brx-checkbox child="check-02" label="Opção 2"></brx-checkbox>
           </div>
           <div class="mb-1 ml-2">
-            <brx-checkbox parent="check-03" child="check-02" check-all-label="Selecionar grupo" uncheck-all-label="Desselecionar grupo"></brx-checkbox>
+            <brx-checkbox
+              parent="check-03"
+              child="check-02"
+              check-all-label="Selecionar grupo"
+              uncheck-all-label="Desselecionar grupo"
+            ></brx-checkbox>
           </div>
           <div class="mb-1 ml-4">
             <brx-checkbox child="check-03" label="Opção 3"></brx-checkbox>
@@ -84,7 +95,11 @@
 
           <brx-checkgroup>
             <div class="mb-1 ml-2">
-              <brx-checkbox parent check-all-label="Selecionar grupo" uncheck-all-label="Desselecionar grupo"></brx-checkbox>
+              <brx-checkbox
+                parent
+                check-all-label="Selecionar grupo"
+                uncheck-all-label="Desselecionar grupo"
+              ></brx-checkbox>
             </div>
             <div class="mb-1 ml-4">
               <brx-checkbox label="Opção 3"></brx-checkbox>
