--- a/demo/datetimepicker.html
+++ b/demo/datetimepicker.html
@@ -6,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- start playground assets -->
-    <link rel="stylesheet" href="https://cdngovbr-ds.estaleiro.serpro.gov.br/design-system/fonts/rawline/css/rawline.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900&amp;display=swap" />
+    <link
+      rel="stylesheet"
+      href="https://cdngovbr-ds.estaleiro.serpro.gov.br/design-system/fonts/rawline/css/rawline.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900&amp;display=swap"
+    />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
-    <link href="build/copperui.css" rel="stylesheet" />
-    <script type="module" src="build/copperui.esm.js"></script>
-    <script nomodule src="build/copperui.js"></script>
+    <link href="/demo/build/copperui.css" rel="stylesheet" />
+    <script type="module" src="/demo/build/copperui.esm.js"></script>
+    <script nomodule src="/demo/build/copperui.js"></script>
     <style media="screen, print" type="text/css">
       html {
         margin: 0;
@@ -48,7 +54,12 @@
 
         <div>
           <div class="col-sm-6 col-md-4 col-lg-3">
-            <brx-datetimepicker type="date" mode="range" placeholder="dd/mm/aaaa até dd/mm/aaaa" label="Label"></brx-datetimepicker>
+            <brx-datetimepicker
+              type="date"
+              mode="range"
+              placeholder="dd/mm/aaaa até dd/mm/aaaa"
+              label="Label"
+            ></brx-datetimepicker>
           </div>
         </div>
       </div>
@@ -68,7 +79,12 @@
 
         <div>
           <div class="col-sm-6 col-md-4 col-lg-3">
-            <brx-datetimepicker type="datetime-local" mode="single" placeholder="dd/mm/aaaa hh:mm" label="Label"></brx-datetimepicker>
+            <brx-datetimepicker
+              type="datetime-local"
+              mode="single"
+              placeholder="dd/mm/aaaa hh:mm"
+              label="Label"
+            ></brx-datetimepicker>
           </div>
         </div>
       </div>
@@ -78,7 +94,13 @@
 
         <div>
           <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
-            <brx-datetimepicker controlled-value="10/05/2023" type="date" mode="single" placeholder="dd/mm/aaaa" label="Label"></brx-datetimepicker>
+            <brx-datetimepicker
+              controlled-value="10/05/2023"
+              type="date"
+              mode="single"
+              placeholder="dd/mm/aaaa"
+              label="Label"
+            ></brx-datetimepicker>
           </div>
         </div>
       </div>
