--- a/demo/upload.html
+++ b/demo/upload.html
@@ -6,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- start playground assets -->
-    <link rel="stylesheet" href="https://cdngovbr-ds.estaleiro.serpro.gov.br/design-system/fonts/rawline/css/rawline.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900&amp;display=swap" />
+    <link
+      rel="stylesheet"
+      href="https://cdngovbr-ds.estaleiro.serpro.gov.br/design-system/fonts/rawline/css/rawline.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900&amp;display=swap"
+    />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
-    <link href="build/copperui.css" rel="stylesheet" />
-    <script type="module" src="build/copperui.esm.js"></script>
-    <script nomodule src="build/copperui.js"></script>
+    <link href="/demo/build/copperui.css" rel="stylesheet" />
+    <script type="module" src="/demo/build/copperui.esm.js"></script>
+    <script nomodule src="/demo/build/copperui.js"></script>
     <style media="screen, print" type="text/css">
       html {
         margin: 0;
@@ -52,7 +58,9 @@
 
         <brx-upload label="Envio de arquivo." data-danger="data-danger"></brx-upload>
 
-        <brx-message class="mt-1" variant="feedback" severity="danger"> Os arquivos devem ser no formato PNG ou JPG e ter no máximo 100MB. </brx-message>
+        <brx-message class="mt-1" variant="feedback" severity="danger">
+          Os arquivos devem ser no formato PNG ou JPG e ter no máximo 100MB.
+        </brx-message>
       </div>
 
       <div>
@@ -69,7 +77,7 @@
         const uploads = Array.from(document.querySelectorAll('brx-upload'));
 
         const mockUpload = () => {
-          return new Promise(resolve => setTimeout(resolve, 3 * 1000));
+          return new Promise((resolve) => setTimeout(resolve, 3 * 1000));
         };
 
         for (const upload of uploads) {
