--- a/demo/pagination.html
+++ b/demo/pagination.html
@@ -6,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- start playground assets -->
-    <link rel="stylesheet" href="https://cdngovbr-ds.estaleiro.serpro.gov.br/design-system/fonts/rawline/css/rawline.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900&amp;display=swap" />
+    <link
+      rel="stylesheet"
+      href="https://cdngovbr-ds.estaleiro.serpro.gov.br/design-system/fonts/rawline/css/rawline.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900&amp;display=swap"
+    />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
-    <link href="build/copperui.css" rel="stylesheet" />
-    <script type="module" src="build/copperui.esm.js"></script>
-    <script nomodule src="build/copperui.js"></script>
+    <link href="/demo/build/copperui.css" rel="stylesheet" />
+    <script type="module" src="/demo/build/copperui.esm.js"></script>
+    <script nomodule src="/demo/build/copperui.js"></script>
     <style media="screen, print" type="text/css">
       html {
         margin: 0;
@@ -361,7 +367,9 @@
             <brx-divider class="d-none d-sm-block mx-3"></brx-divider>
 
             <brx-pagination-information class="d-none d-sm-flex">
-              <span class="current">1</span>&ndash;<span class="per-page">20</span>&nbsp;de&nbsp;<span class="total">50</span>&nbsp;itens
+              <span class="current">1</span>&ndash;<span class="per-page">20</span>&nbsp;de&nbsp;<span class="total"
+                >50</span
+              >&nbsp;itens
             </brx-pagination-information>
 
             <brx-pagination-go-to-page class="d-none d-sm-flex ml-auto">
@@ -409,7 +417,9 @@
             <brx-divider class="d-none d-sm-block mx-3"></brx-divider>
 
             <brx-pagination-information class="d-none d-sm-flex">
-              <span class="current">1</span>&ndash;<span class="per-page">20</span>&nbsp;de&nbsp;<span class="total">50</span>&nbsp;itens
+              <span class="current">1</span>&ndash;<span class="per-page">20</span>&nbsp;de&nbsp;<span class="total"
+                >50</span
+              >&nbsp;itens
             </brx-pagination-information>
           </brx-pagination>
 
@@ -427,7 +437,9 @@
             <brx-divider class="d-none d-sm-block mx-3"></brx-divider>
 
             <brx-pagination-information class="d-none d-sm-flex">
-              <span class="current">1</span>&ndash;<span class="per-page">20</span>&nbsp;de&nbsp;<span class="total">50</span>&nbsp;itens
+              <span class="current">1</span>&ndash;<span class="per-page">20</span>&nbsp;de&nbsp;<span class="total"
+                >50</span
+              >&nbsp;itens
             </brx-pagination-information>
 
             <brx-divider class="d-none d-sm-block mx-3"></brx-divider>
@@ -591,7 +603,9 @@
               <brx-divider class="d-none d-sm-block mx-3"></brx-divider>
 
               <brx-pagination-information class="d-none d-sm-flex">
-                <span class="current">1</span>&ndash;<span class="per-page">20</span>&nbsp;de&nbsp;<span class="total">50</span>&nbsp;itens
+                <span class="current">1</span>&ndash;<span class="per-page">20</span>&nbsp;de&nbsp;<span class="total"
+                  >50</span
+                >&nbsp;itens
               </brx-pagination-information>
 
               <brx-divider class="d-none d-sm-block mx-3"></brx-divider>
