--- a/demo/sign-in.html
+++ b/demo/sign-in.html
@@ -6,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- start playground assets -->
-    <link rel="stylesheet" href="https://cdngovbr-ds.estaleiro.serpro.gov.br/design-system/fonts/rawline/css/rawline.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900&amp;display=swap" />
+    <link
+      rel="stylesheet"
+      href="https://cdngovbr-ds.estaleiro.serpro.gov.br/design-system/fonts/rawline/css/rawline.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900&amp;display=swap"
+    />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
-    <link href="build/copperui.css" rel="stylesheet" />
-    <script type="module" src="build/copperui.esm.js"></script>
-    <script nomodule src="build/copperui.js"></script>
+    <link href="/demo/build/copperui.css" rel="stylesheet" />
+    <script type="module" src="/demo/build/copperui.esm.js"></script>
+    <script nomodule src="/demo/build/copperui.js"></script>
     <style media="screen, print" type="text/css">
       html {
         margin: 0;
@@ -113,7 +119,12 @@
         <div>
           <brx-button signin>
             <brx-signin>
-              <div slot="content">Entrar com&nbsp;<img alt="gov.br" src="https://www.gov.br/++theme++padrao_govbr/img/govbr-colorido-b.png" /></div>
+              <div slot="content">
+                Entrar com&nbsp;<img
+                  alt="gov.br"
+                  src="https://www.gov.br/++theme++padrao_govbr/img/govbr-colorido-b.png"
+                />
+              </div>
             </brx-signin>
           </brx-button>
         </div>
