--- a/demo/textarea.html
+++ b/demo/textarea.html
@@ -6,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- start playground assets -->
-    <link rel="stylesheet" href="https://cdngovbr-ds.estaleiro.serpro.gov.br/design-system/fonts/rawline/css/rawline.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900&amp;display=swap" />
+    <link
+      rel="stylesheet"
+      href="https://cdngovbr-ds.estaleiro.serpro.gov.br/design-system/fonts/rawline/css/rawline.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900&amp;display=swap"
+    />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
-    <link href="build/copperui.css" rel="stylesheet" />
-    <script type="module" src="build/copperui.esm.js"></script>
-    <script nomodule src="build/copperui.js"></script>
+    <link href="/demo/build/copperui.css" rel="stylesheet" />
+    <script type="module" src="/demo/build/copperui.esm.js"></script>
+    <script nomodule src="/demo/build/copperui.js"></script>
     <style media="screen, print" type="text/css">
       html {
         margin: 0;
@@ -109,7 +115,12 @@
         <h2>Com limite e contador de caracteres</h2>
 
         <div>
-          <brx-textarea label="Label" placeholder="Exemplo de textarea com contador de caracteres" counter="limit" maxlength="200"></brx-textarea>
+          <brx-textarea
+            label="Label"
+            placeholder="Exemplo de textarea com contador de caracteres"
+            counter="limit"
+            maxlength="200"
+          ></brx-textarea>
         </div>
       </div>
 
@@ -117,7 +128,11 @@
         <h2>Sem limite com contador de caracteres</h2>
 
         <div>
-          <brx-textarea label="Label" placeholder="Exemplo de textarea com contador e sem limite de caracteres" counter="total"></brx-textarea>
+          <brx-textarea
+            label="Label"
+            placeholder="Exemplo de textarea com contador e sem limite de caracteres"
+            counter="total"
+          ></brx-textarea>
         </div>
       </div>
 
