feat(core): brx-menu (#48)
Closes #48

--- a/packages/core/src/html/index.html
+++ b/packages/core/src/html/index.html
@@ -187,6 +187,10 @@
             name: 'Magic Button',
           },
           {
+            path: 'menu.html',
+            name: 'Menu',
+          },
+          {
             path: 'message.html',
             name: 'Message',
           },
