feat(core): brx-switch (#43)
Closes #43

--- a/packages/core/src/html/index.html
+++ b/packages/core/src/html/index.html
@@ -162,10 +162,12 @@
             path: 'dropdown.html',
             name: 'Dropdown',
           },
+
           {
             path: 'header.html',
             name: 'Header',
           },
+
           {
             path: 'icon.html',
             name: 'Ícone',
@@ -233,6 +235,10 @@
           {
             path: 'step.html',
             name: 'Step',
+          },
+          {
+            path: 'switch.html',
+            name: 'Switch',
           },
           {
             path: 'tab.html',
